[package]
name = "rust-nb-server"
version = "0.1.0"
authors = ["Fuyang Liu <liufuyang@users.noreply.github.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0-rc.1"
rocket_contrib = "0.4.0-rc.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1"
rust_nb = { git = "git://github.com/liufuyang/rust-nb", rev = "e1fb1852cbc32cadcf2cdf8bcae7dcf64f6e08e6"}
# rust_nb = { path = "../rust-nb" }