[package]
name = "rust-nb-server"
version = "0.1.0"
authors = ["Fuyang Liu <liufuyang@users.noreply.github.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0-rc.2"
rocket_contrib = "0.4.0-rc.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1"
rust_nb = { git = "git://github.com/liufuyang/rust-nb", rev = "d33f9fc800df179bc52463fd25e0c1c78b25410b"}
# rust_nb = { path = "../rust-nb" }